Thu Jun 21 15:17:21 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/Service_Participant.h:

          Removed unneeded include of PortableServer.h.

Wed Jun 20 18:03:04 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DdsDcps_pch.h:
        * dds/DdsDcps.mpc:

          With the ORB moved from service participant to the
          info repo, removed dependency on TAO_PortableServer
          lib and (implicitly) on TAO_AnyTypeCode lib.

Wed Jun 20 16:47:49 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/WriteDataContainer.h:
        * NEWS:
        * tests/DCPS/Rejects/DataReaderListener.cpp:
        * tests/DCPS/Rejects/DataReaderListener.h:
        * tests/DCPS/Rejects/publisher.cpp:
        * tests/DCPS/Rejects/run_test.pl:
        * tests/DCPS/Rejects/subscriber.cpp:
        * tests/DCPS/Rejects/Writer.cpp:
        * tests/DCPS/Rejects/Writer.h:

          Added publication side checks for max_instances and
          max_samples in reliable qos.

Tue Jun 19 16:02:10 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/DpShutdown/dpshutdown.cpp:

          Each domain participant now has its own transport instance
          as required when using RTPS transports.

Mon Jun 18 21:33:58 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fixed logic for when to set log file name from config file value.

Mon Jun 18 18:08:44 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Bypass the topic entity refs check when the remove flag is true,
          in which case the entire participant is being removed anyway.

Thu Jun 14 11:21:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/TopicReuse/tpreuse.cpp:
          Improved this test

Thu Jun 14 11:02:17 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
