@@ -1,3 +1,9 @@
+Thu Jun 21 15:46:25 UTC 2012  Byron Harris  <harrisb@ociweb.com>
+
+        * dds/DCPS/WriteDataContainer.cpp:
+
+          Avoid compiler warnings about ctor initialization order.
+
 Thu Jun 21 15:17:21 UTC 2012  Byron Harris  <harrisb@ociweb.com>
 
         * dds/DCPS/Service_Participant.h:
